<resources>
    <string name="app_name">CATLORIS</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="dashboard">Dashboard</string>
    <string name="article">Article</string>
    <string name="challenges">Challenges</string>
    <string name="profile">Profile</string>
    <string name="scan">Scan</string>

    <string name="splash_logo">CatLoris Logo</string>

    <!-- Login Page -->
    <string name="login_logo">Login Logo</string>
    <string name="login_title">log in to access your account</string>
    <string name="email_login">Enter your email</string>
    <string name="pass_login">Password</string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="login_button">LOGIN</string>
    <string name="guest_button">AS GUEST</string>
    <string name="regist_word1">Don\'t have account?</string>
    <string name="regist_button">Sign Up</string>

    <!-- Guest Page -->
    <string name="guest_name">Enter Your Name</string>
    <string name="guest_email">Enter Your Email</string>
    <string name="guest_enter">ENTER</string>
    <string name="guest_login">Back to Log In</string>

    <!-- Register Page -->
    <string name="register_logo">Register Logo</string>
    <string name="register_title">Get Started</string>
    <string name="register_title_1">by creating an account</string>
    <string name="register_button">REGISTER</string>
    <string name="login_word1">Already have an account?</string>
    <string name="login_btn_word">Log In</string>
    <string name="register_name">Full name</string>
    <string name="register_email">Email</string>
    <string name="register_phone">Phone Number</string>
    <string name="register_pass">Password</string>
    <string name="register_gender">Fill Male or Female</string>

    <!-- Dashboard -->
    <string name="bg_dashboard_cat">Icon Cat Background</string>
    <string name="dashboard_icon_cat">Cat Icon</string>
    <string name="dashboard_profile_pict">Dash Profile Pict</string>
    <string name="dashboard_welcome">Welcome,</string>
    <string name="dashboard_name">Username</string>
    <string name="dashboard_point">Point : -</string>
    <string name="dashboard_edit_profile">Button Edit Profile</string>
    <string name="dashboard_logout">Button Logout</string>
    <string name="dashboard_title_calories">YOUR CONDITION</string>
    <string name="dashboard_body_condition">Undefined</string>
    <string name="dashboard_btn_bmi">Body Mass Index</string>
    <string name="dashboard_btn_health_insight">Health Insight &amp; Tips</string>
    <string name="dashboard_btn_food_history">Your Food History</string>
    <string name="dashboard_btn_workout">Physical Activity</string>
    <string name="dashboard_see_more">See More</string>
    <string name="dashboard_scroll">Scroll >></string>
    <string name="dashbooard_cat_illustration">Cat Illustration</string>
    <string name="dashboard_your_fat">Your Fat : </string>
    <string name="dashboard_dummy_fat">Undefined</string>

    <!-- Scan -->
    <string name="scan_title">ANALYZE THE FOOD</string>
    <string name="scan_photo">Scan Photo</string>
    <string name="scan_gallery">Open Gallery</string>
    <string name="scan_analyze">Analyze Button</string>
    <string name="scan_camera">Open Camera</string>
    <string name="scan_save">SAVE RESULT</string>
    <string name="scan_clear">CLEAR PICTURE</string>
    <string name="scan_result_title">ANALYZE RESULT</string>
    <string name="scan_result_detect">Result</string>
    <string name="scan_result_calories">Calories :</string>
    <string name="scan_result_protein">Protein :</string>
    <string name="scan_result_fats">Fats :</string>
    <string name="scan_result_carbo">Carbohydrate :</string>
    <string name="scan_result_all">--</string>
    <string name="empty_image_warning">Entry Your Pict First</string>
    <string name="image_classifier_failed">Failed to Prepate Image Classifier</string>


    <!-- Challenge -->
    <string name="challenges_scroll">scroll challenges</string>
    <string name="challenges_deck">Challenges Deck</string>
    <string name="challenge_task">Challenge Task</string>
    <string name="challenge_star">Challenge star</string>
    <string name="challenge_icon">Challenge Icon</string>
    <string name="challenge_button">Let\'s Go</string>

    <!--Article-->
    <string name="title_article">Start Your Healthy\nJourney Today!</string>
    <string name="description_article">description</string>
    <string name="article_title">Article Title</string>
    <string name="recyclerview_description">recyclerview_desc\n</string>
    <string name="title_article_description">title_desc\n</string>
    <string name="article_image_description">article_image_description</string>
    <string name="article_title_description">article_title_description</string>
    <string name="article_description_description">article_description_description\n</string>
    <string name="article_seemore">See More Article</string>
    <string name="article_scroll_down">Scroll Down</string>


    <!--Profile-->
    <string name="user_name">Username</string>
    <string name="edit_profile_button">Edit Profile</string>
    <string name="full_name">Username</string>
    <string name="Phone_Number">Phone Number</string>
    <string name="Email">Your Email</string>
    <string name="save">save</string>
    <string name="profile_page">PROFILE</string>
    <string name="save_profil_btn">Save Profile</string>

    <!--BMI-->
    <string name="BMI">Body Mass Index Calculator</string>
    <string name="Height">Your Height?\n(cm)</string>
    <string name="weight">Your Weight?\n(kg)</string>
    <string name="Age">Your Age?\n(y.o)</string>
    <string name="calculate">Calculate</string>
    <string name="hint_score">20</string>
    <string name="bmi_result">-</string>

    <!-- Workout -->
    <string name="workout_image_description">workout desc</string>
    <string name="workout_title">Workout Title</string>
    <string name="workout_title_description">workout title description</string>
    <string name="Do">Do</string>
    <string name="Title_workout">Hi, Healthy person!\nLet’s do your Workout!</string>
    <string name="title_workout_description">title_desc</string>

    <!-- Challenge Page -->
    <string name="title_challenges">Consume 100 Calories in \nOne Healthy Meal</string>
    <string name="desc_challenges">In this challenge, players are encouraged to focus on consuming 100 calories from a single healthy meal. The goal is to inspire healthier eating habits by starting small and choosing nutrient-dense options. Examples include a serving of fresh fruit like an apple, a handful of berries, a small bowl of mixed greens with a light dressing, or a portion of unsweetened yogurt.\n\n</string>
    <string name="food_desc">food desc</string>
    <string name="food_title_description">food title desc</string>
    <string name="food_history">food</string>
    <string name="calories_history">578\ncalories</string>
    <string name="food_recommendation">Food Recommendation</string>

    <!-- Workout Desc -->
    <string name="workdesc_btn_back">Back Button</string>
    <string name="workdesc_title">Workout Activity</string>
    <string name="workdesc_illustration">Workout Illustration</string>
    <string name="workdesc_rap">Rap : 15</string>
    <string name="workdesc_set">Set : 2</string>
    <string name="workdesc_done_btn">DONE</string>
    <string name="workdesc_start_btn">Start</string>
    <string name="workdesc_con_btn">Continue</string>
    <string name="workdesc_stop_btn">Pause</string>
    <string name="work_reset">Reset Button</string>
    <string name="workdesc_time_roll">60</string>

    <!-- Welcome Page -->
    <string name="intro_first_text_desc">Cat Loris is an Android application designed to transform the calorie-tracking experience into something engaging and motivating. By incorporating gamification elements, Cat Loris brings a more enjoyable and interactive approach to daily nutrition management.</string>
    <string name="intro_second_text_title">Essential Features for a Healthier You</string>
    <string name="intro_second_text_desc">Track Daily Calories, Input your meals, and we’ll calculate your calorie intake automatically. Nutrition Recommendations, Get personalized suggestions tailored to your health goals. Monitor Physical Activity, Record your daily exercises and see how many calories you’ve burned.</string>
    <string name="intro_third_text_title">Let\'s get Started</string>
    <string name="intro_third_text_desc">Enhance your well-being with the diverse and innovative features offered by the CatLoris application, designed to support your journey towards better health.</string>
    <string name="first_intro_pict">First Pict Intro</string>
    <string name="second_intro_pict">Second Pict Intro</string>
    <string name="third_intro_pict">Third Pict Intro</string>
    <string name="intro_bar">Intro Bar</string>
    <string name="intro_next">NEXT</string>
    <string name="intro_finish">FINISH</string>

    <!-- Parameters User Page -->
    <string name="par_welcome">Hi, Welcome</string>
    <string name="par_welcome_user">Let\'s fill the metrics below</string>
    <string name="par_age_title">What\'s your Age?</string>
    <string name="par_height_title">What\'s your Height (cm)?</string>
    <string name="par_weight_title">What\'s your Weight (kg)?</string>
    <string name="par_fat_title">How much fat is in your body?</string>
    <string name="par_age_hint">Example : 20</string>
    <string name="par_height_hint">Example : 175</string>
    <string name="par_weight_hint">Example : 70</string>
    <string name="par_fat_hint">Example : 20(%) -> 50(%) = ?</string>
    <string name="par_button_submit">YES I\'M DONE</string>

    <!-- Alarm -->
    <string name="one_time_alarm">One Time Alarm</string>
    <string name="alarm_date">Tanggal Alarm</string>
    <string name="set_one_time_alarm">Set One Time Alarm</string>
    <string name="alarm_message">Pesan Alarm</string>
    <string name="repeating_alarm">Repeating Alarm</string>
    <string name="set_repeating_alarm">Set Repeating Alarm</string>
    <string name="cancel_alarm">Cancel Alarm</string>
    <string name="alarm_time">Waktu Alarm</string>
    <string name="malam">Dinner Time</string>
    <string name="siang">Lunch Time</string>
    <string name="sarapan">Breakfast Time</string>
    <string name="set_alarm_button">SET</string>
    <string name="set_alarm_button_profile">Set Alarm</string>
    <string name="voice_search">Voice Search</string>
    <string name="search_article">Search Article</string>
    <string name="empty_calories_warning">Warning Issue</string>
    <string name="result_bmi">BODY MASS RESULT</string>
    <string name="bmi_result_button">CONFIRM YOUR CONDITION</string>


</resources>