<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.bangkit.catloris.ui.dashboard.DashboardFragment"
        android:label="@string/dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_article"
        android:name="com.bangkit.catloris.ui.article.ArticleFragment"
        android:label="@string/article"
        tools:layout="@layout/fragment_article" />

    <fragment
        android:id="@+id/navigation_scan"
        android:name="com.bangkit.catloris.ui.scan.ScanFragment"
        android:label="@string/scan"
        tools:layout="@layout/fragment_scan"/>

    <fragment
        android:id="@+id/navigation_challenge"
        android:name="com.bangkit.catloris.ui.challenge.ChallengeFragment"
        android:label="@string/challenges"
        tools:layout="@layout/fragment_challenge" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.bangkit.catloris.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />

</navigation>