<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp"
    android:background="@drawable/bg_app"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/article_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:layout_marginBottom="8dp"
            android:src="@drawable/ic_person_24"
            android:contentDescription="@string/article_image_description" />

        <TextView
            android:id="@+id/article_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/article_title"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:contentDescription="@string/article_title_description" />

        <TextView
            android:id="@+id/article_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description_article"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:layout_marginTop="4dp"
            android:maxLines="2"
            android:ellipsize="end"
            android:contentDescription="@string/article_description_description" />

    </LinearLayout>

</androidx.cardview.widget.CardView>
