<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="4dp"
    android:background="@drawable/bg_app"
    android:backgroundTint="@color/color_1"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/workout_list_image"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:scaleType="centerCrop"
            android:layout_marginBottom="8dp"
            android:src="@drawable/ic_person_24"
            android:contentDescription="@string/workout_image_description"/>

        <TextView
            android:id="@+id/workout_list_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/workout_title"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:contentDescription="@string/workout_title_description"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="230dp"
            android:text="@string/Do"
            android:textStyle="bold"
            android:textSize="20sp"
            android:backgroundTint="@color/color_3"/>


    </LinearLayout>

</androidx.cardview.widget.CardView>