<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_app"
    tools:context=".ui.sidefeatures.WorkoutDetailActivity">

    <ImageButton
        android:id="@+id/work_back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/workdesc_btn_back"
        android:src="@drawable/ic_back_btn_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/work_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/workdesc_title"
        android:textAlignment="center"
        android:textColor="@color/color_4"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/work_illustration_deck"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_margin="30dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/work_title">

        <ImageView
            android:id="@+id/work_illustration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/workdesc_illustration"
            android:scaleType="centerCrop"
            android:src="@drawable/workout_cat_illustration" />
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/work_time_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:background="@drawable/custom_dash_down"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/work_illustration_deck">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/work_rap"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/workdesc_rap"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/workdesc_set"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/workdesc_set"
                android:textAlignment="textEnd"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:background="@drawable/custom_workout_time"
            android:orientation="vertical">

            <TextView
                android:id="@+id/work_countdown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/workdesc_time_roll"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="40sp"
                android:textStyle="bold" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/work_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/work_reset"
            android:src="@drawable/ic_reset_24"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/tranparent"/>

        <Button
            android:id="@+id/work_done_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:text="@string/workdesc_done_btn"
            android:backgroundTint="@color/color_4"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/work_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/workdesc_start_btn"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:backgroundTint="@color/color_4"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="13sp" />

            <Button
                android:id="@+id/work_continue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/workdesc_con_btn"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:backgroundTint="@color/color_4"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="13sp"/>


            <Button
                android:id="@+id/work_pause"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/workdesc_stop_btn"
                android:backgroundTint="@color/color_4"
                android:textColor="@color/white"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:textStyle="bold"
                android:textSize="13sp" />
        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
