<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_app"
    tools:context=".ui.dashboard.DashboardFragment">

    <ImageView
        android:id="@+id/bg_icon_cat"
        android:layout_width="wrap_content"
        android:layout_height="412dp"
        android:contentDescription="@string/bg_dashboard_cat"
        android:src="@drawable/bg_dashboard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/profile_board_dash"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="20dp"
        android:background="@drawable/custom_dash_up"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/dash_profile_pict"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center_vertical"
            android:layout_margin="10dp"
            android:src="@drawable/dummy_img"
            app:civ_border_color="@color/color_3"
            app:civ_border_width="2dp" />

        <LinearLayout
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical"
            tools:ignore="UselessLeaf">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:text="@string/dashboard_welcome"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/dashboard_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:text="@string/dashboard_name"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/dashboard_point"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:text="@string/dashboard_point"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="normal" />

        </LinearLayout>

        <ImageButton
            android:id="@+id/dashboard_editprof"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:backgroundTint="@color/color_2"
            android:contentDescription="@string/dashboard_edit_profile"
            android:src="@drawable/ic_editprof_24"
            tools:ignore="TouchTargetSizeCheck" />

        <ImageButton
            android:id="@+id/dashboard_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:backgroundTint="@color/color_2"
            android:contentDescription="@string/dashboard_logout"
            android:src="@drawable/ic_logout_24"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/calories_deck_dash"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="370dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/custom_dash_down"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bg_icon_cat">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/dashboard_title_calories"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/calories_detect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/dashboard_calories_detect"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/sidefeature_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calories_deck_dash">

        <ImageButton
            android:id="@+id/bmi_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/tranparent"
            android:layout_margin="10dp"
            android:contentDescription="@string/dashboard_btn_bmi"
            android:src="@drawable/bmi_button" />

        <ImageButton
            android:id="@+id/hit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/tranparent"
            android:layout_margin="10dp"
            android:contentDescription="@string/dashboard_btn_health_insight"
            android:src="@drawable/hit_button" />

        <ImageButton
            android:id="@+id/food_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/tranparent"
            android:layout_margin="10dp"
            android:contentDescription="@string/dashboard_btn_food_history"
            android:src="@drawable/food_button" />

        <ImageButton
            android:id="@+id/workout_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/tranparent"
            android:layout_margin="10dp"
            android:contentDescription="@string/dashboard_btn_workout"
            android:src="@drawable/physical_button" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>