<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_app"
    tools:context=".ui.sidefeatures.WorkoutActivity">

    <TextView
        android:id="@+id/title_workout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:paddingBottom="16dp"
        android:text="@string/Title_workout"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textColor="@color/color_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/title_workout_description"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/workout_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/recyclerview_description"
        android:divider="@android:color/transparent"
        android:dividerHeight="8dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_workout"
        tools:listitem="@layout/list_item_workout" />

</androidx.constraintlayout.widget.ConstraintLayout>